# fatfs-tool

./: .clang-format  .gitignore  CMakeLists.txt  README.md
fatfs/: CMakeLists.txt
fatfs/ports/: ffconf.h  port.c
fatfs/ports/file/: config.h  diskio.c
src/: CMakeLists.txt  fferrno.c  fferrno.h  main.c
src/cmd/: builtin.c  cmd.h  create.c  format.c  mount.c  shell.c
